Fix text-wrap issue with foodbank logo

--- a/scss/vars/_sections.scss
+++ b/scss/vars/_sections.scss
@@ -111,7 +111,7 @@ section {
 
   .editorial-img {
     background-color: white;
-    display: inline-block;
+    display: block;
     margin-top: 20px;
     padding: 6%;
     width: 65%;
